--- a/src/components/Navbar.astro
+++ b/src/components/Navbar.astro
@@ -44,7 +44,7 @@ const menuitems = [
 						</>
 					))
 				}
-				<li><ToggleTheme /></li>
+				<!-- <li><ToggleTheme /></li> -->
 			</ul>
 		</MenuItems>
 	</Astronav>
