--- a/src/components/About.astro
+++ b/src/components/About.astro
@@ -7,18 +7,48 @@
 	class="mb-10 flex flex-col items-center justify-center lg:mb-0 lg:h-screen lg:flex-row"
 >
 	<div class="mb-10 flex w-full flex-col items-center justify-center lg:mb-0 lg:w-1/2">
-		<h2 class="font-monospace text-2xl text-orange lg:text-4xl">About me</h2>
+		<h2 class="font-monospace text-2xl text-orange lg:text-4xl">Experience</h2>
 		<span class="mb-6 ml-2 h-1 w-10 bg-orange"></span>
 	</div>
 
 	<div class="w-full text-justify text-black dark:text-white lg:w-1/2">
-		<p class="mb-2">
-			Here is your description in English! Lorem ipsum dolor sit amet, consectetur adipiscing elit,
-			sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-			quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute
-			irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
-			Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim
-			id est laborum
+		<p>
+		<h3 class="text-2xl">Employment</h3>
+		<ul>
+			<li>
+				<b>WXY studio</b>
+				<p><i>Associate, December 2022-present</i></p>
+				<p><i>Senior Urban Analyst, December 2021-December 2022</i></p>
+				<p><i>Urban Analyst, November 2020-December 2021</i></p>
+				<p><i>Urban Planner, October 2019-November 2020</i></p>
+			</li><br>
+			<li>
+				<b>Levanthal Center for Advanced Urbanism (MIT)</b>
+				<p><i>Research Associate, September 2018-October 2019</i></p>
+			</li><br>
+			<li>
+				<b>Civic Data Design Lab (MIT)</b>
+				<p><i>Research Assistant, September 2016-September 2018</i></p>
+			</li><br>
+			<li>
+				<b>Wildlife Conservation Society</b>
+				<p><i>Program Officer, June 2014-July 2016  </i></p>
+				<p><i>Program Assistant, August 2013-June 2014  </i></p>
+				<p><i>Research Assistant, June 2012-August 2013  </i></p>
+			</li><br>
+		</ul>
 		</p>
+		<p>
+		<h3 class="text-2xl">Education</h3>
+		<ul>
+			<li><b>Massachusetts Institute of Technology</b> 
+			<p><i>Master in City Planning 2016-2018</i></p></li><br>
+			<li><b>Hunter College</b>
+				<p><i>Certificate in GIS 2013-2015</i></p></li><br>
+			<li><b>New York University</b>
+			<p><i>BA Environmental Studies and Urban Studies 2008-2012</i> </p></li>
+		</ul>
+		</p>
+		
 	</div>
 </section>
