--- a/src/components/Projects.astro
+++ b/src/components/Projects.astro
@@ -22,11 +22,12 @@ const projects = await getCollection('projects', ({ data }) => {
 					title={project.data.title}
 					alt={project.data.img_alt}
 					tags={project.data.tags}
+					img={project.data.img}
 				/>
 			))
 		}
 	</div>
-	<a
+	<!-- <a
 		href="https://github.com/"
 		target="_blank"
 		rel="noopener"
@@ -47,5 +48,5 @@ const projects = await getCollection('projects', ({ data }) => {
 				stroke-linejoin="round"
 				d="M17.25 8.25L21 12m0 0l-3.75 3.75M21 12H3"></path>
 		</svg>
-	</a>
+	</a> -->
 </section>
