--- a/src/components/ui/Social.astro
+++ b/src/components/ui/Social.astro
@@ -2,7 +2,7 @@
 import { Icon } from 'astro-icon';
 ---
 
-<a href="https://github.com/" target="_blank" rel="noopener" aria-label="github"
+<a href="https://github.com/mariogiampieri" target="_blank" rel="noopener" aria-label="github"
 	><Icon
 		class="h-8 hover:text-orange dark:hover:text-orange md:h-12"
 		name="simple-icons:github"
