update section styles

--- a/src/components/Projects.astro
+++ b/src/components/Projects.astro
@@ -12,6 +12,11 @@ const projects = await getCollection('projects', ({ data }) => {
 	id="projects"
 	class="mb-10 flex flex-col items-center justify-center md:mb-0 md:h-screen"
 >
+	<style>
+		.mb-10 {
+			height: fit-content;
+		}
+	</style>
 	<h2 class="font-monospace text-2xl text-orange lg:text-4xl">Projects</h2>
 	<span class="mb-10 h-1 w-10 bg-orange"></span>
 	<div class="mb-10 flex w-full flex-col flex-wrap items-center md:flex-row">
