--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -8,11 +8,16 @@ import Button from '@components/ui/Button.astro';
 	data-testid="hero"
 	class="flex h-screen flex-col-reverse items-center justify-center text-center lg:flex-row"
 >
+	<style>
+		.mb-10 {
+			height: fit-content;
+		}
+	</style>
 	<div class="mb-10 flex flex-col items-center lg:mb-0 lg:w-1/2">
 		<div>
 			<h1 class="mb-10 font-monospace text-3xl text-black dark:text-white lg:text-5xl">
-				Hi! My name is <span class="text-orange">Mario Giampieri</span> and I am an urban planner and technologist based in New
-				York.
+				Hi! My name is <span class="text-orange">Mario Giampieri</span> and I am an urban planner
+				and technologist based in New York.
 			</h1>
 		</div>
 	</div>
