--- a/src/components/Navbar.astro
+++ b/src/components/Navbar.astro
@@ -19,10 +19,19 @@ const menuitems = [
 ];
 ---
 
+<script>
+	const cvButton = document.querySelectorAll('button.cv-button');
+	cvButton.forEach((b) => {
+		b.addEventListener('click', () => {
+			window.open('https://marioag-portfolio.s3.amazonaws.com/cv/marioag_cv_230704.pdf');
+		});
+	});
+</script>
+
 <header data-testId="header" class="my-5 flex flex-col items-center justify-between lg:flex-row">
 	<Astronav>
 		<div class="flex w-full items-center justify-between lg:w-auto">
-			<Button size={'sm'} name="Download CV">Download CV</Button>
+			<Button size={'sm'} class="cv-button" name="Download CV">Download CV</Button>
 			<div class="block lg:hidden">
 				<MenuIcon class="h-4 w-4 text-black dark:text-white" />
 			</div>
