--- a/src/components/ui/Social.astro
+++ b/src/components/ui/Social.astro
@@ -8,15 +8,19 @@ import { Icon } from 'astro-icon';
 		name="simple-icons:github"
 	/></a
 >
-<a href="https://www.linkedin.com/" target="_blank" rel="noopener" aria-label="linkedin"
+<a
+	href="https://www.linkedin.com/in/mario-giampieri-3672442a/"
+	target="_blank"
+	rel="noopener"
+	aria-label="linkedin"
 	><Icon
 		class="h-8 hover:text-orange dark:hover:text-orange md:h-12"
 		name="simple-icons:linkedin"
 	/></a
 >
-<a href="https://twitter.com/" target="_blank" rel="noopener" aria-label="twitter"
+<!-- <a href="https://twitter.com/" target="_blank" rel="noopener" aria-label="twitter"
 	><Icon
 		class="h-8 hover:text-orange dark:hover:text-orange md:h-12"
 		name="simple-icons:twitter"
 	/></a
->
+> -->
